current_build_errors.txt
    Blocking waiting for file lock on build directory
   Compiling cfg-if v1.0.1
   Compiling memchr v2.7.5
   Compiling utf8parse v0.2.2
   Compiling regex-syntax v0.8.5
   Compiling once_cell v1.21.3
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.15.4
   Compiling subtle v2.6.1
   Compiling log v0.4.27
   Compiling regex-syntax v0.6.29
   Compiling anstyle v1.0.11
   Compiling smallvec v1.15.1
   Compiling colorchoice v1.0.4
   Compiling is_terminal_polyfill v1.70.1
   Compiling anstyle-query v1.1.3
   Compiling scopeguard v1.2.0
   Compiling ryu v1.0.20
   Compiling overload v0.1.1
   Compiling adler2 v2.0.1
   Compiling gimli v0.31.1
   Compiling quote v1.0.40
   Compiling libc v0.2.174
   Compiling generic-array v0.14.7
   Compiling typenum v1.18.0
   Compiling zerocopy v0.8.26
   Compiling lock_api v0.4.13
   Compiling strsim v0.11.1
   Compiling toml_write v0.1.2
   Compiling itoa v1.0.15
   Compiling pin-project-lite v0.2.16
   Compiling option-ext v0.2.0
   Compiling jobserver v0.1.33
   Compiling clap_lex v0.7.5
   Compiling winnow v0.7.11
   Compiling lazy_static v1.5.0
   Compiling anstyle-parse v0.2.7
   Compiling nu-ansi-term v0.46.0
   Compiling thread_local v1.1.9
   Compiling num-traits v0.2.19
   Compiling cpufeatures v0.2.17
   Compiling bitflags v2.9.1
   Compiling miniz_oxide v0.8.9
   Compiling sharded-slab v0.1.7
   Compiling keccak v0.1.5
   Compiling unsafe-libyaml v0.2.11
   Compiling rustc-demangle v0.1.25
   Compiling termcolor v1.4.1
   Compiling same-file v1.0.6
   Compiling syn v2.0.104
   Compiling tracing-core v0.1.34
   Compiling anstream v0.6.19
   Compiling humantime v2.2.0
   Compiling walkdir v2.5.0
   Compiling libloading v0.8.8
   Compiling urlencoding v2.1.3
   Compiling cc v1.2.27
   Compiling either v1.15.0
   Compiling base64 v0.21.7
   Compiling glob v0.3.2
   Compiling httpdate v1.0.3
   Compiling hex v0.4.3
error[E0432]: unresolved import `crate::error`
 --> /home/ghuntley/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/either-1.15.0/src/into_either.rs:5:12
  |
5 | use crate::error::Error;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `core::error`

   Compiling clap_builder v4.5.40
For more information about this error, try `rustc --explain E0432`.
error: could not compile `either` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
